[project]
name = "crtsh-subfinder"
version = "1.1.0"
description = "A simple CLI tool to fetch subdomains from crt.sh (with retries)"
authors = [{ name = "ByteSecure", email = "your-email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "requests",
    "colorama"
]

[project.scripts]
crtsh-subfinder = "crtsh_subfinder.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
